# AntiLLMFuzz

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: ablation_experiments.yaml  config.yaml  simple_config.yaml
docs/: ARCHITECTURE.md  COVERAGE.md
scripts/: build_distribution.py  demo_anti_llm_fuzz.py  export_dashboard.py  generate_seed_corpus.py  import_coverage_csv.py  install.py  recompute_rankings.py  run_full_pipeline.py  validate_environment.py
src/: __init__.py  adaptive_feedback_loop.py  cli.py  data_models.py  enhanced_cli.py  token_prioritizer.py
src/config/: __init__.py  argument_parser.py  constants.py
src/extractors/: __init__.py  base_extractor.py
src/extractors/documentation/: __init__.py  doc_extractor.py
src/extractors/java/: __init__.py  java_extractor.py
src/extractors/python/: __init__.py  python_extractor.py
src/feedback/: __init__.py  data_models.py  defect_analyzer.py  feedback_agent.py  feedback_loop.py  priority_adjuster.py
src/fuzzer/: __init__.py  adaptive_generation.py  api.py  base_interfaces.py  config_integration.py  config_manager.py  coverage_tracker.py  data_models.py  document_processor.py  experiment_metadata.py  feedback_collector.py  integration.py  javac_target_system.py  llm_fuzzer_simulator.py  llm_test_generator.py  performance_optimizations.py  performance_simulator.py  random_seed_manager.py  target_system_simulator.py  test_executor.py  validation.py  vulnerability_injector.py
src/pipeline/: __init__.py  pipeline_orchestrator.py
src/priority/: __init__.py  calculation_strategies.py  dynamic_manager.py  metrics.py
src/scs/: __init__.py  data_models.py  feedback_simulator.py  hotspot_analyzer.py  llm_feedback_simulator.py  scs_calculator.py
src/storage/: sqlite_store.py
src/strategies/: __init__.py  base_strategy.py  selector.py
src/strategies/generic/: __init__.py  cognitive_load.py  formatting_noise.py  paraphrasing.py  structural_noise.py
src/strategies/semantic/: __init__.py  cognitive_manipulation.py  context_poison.py  context_poisoning.py  contradictory_info.py  controlflow_misdirection.py  evasive_suffix.py  (+12 more)
src/utils/: __init__.py  config_loader.py  error_handler.py  file_reader.py  file_utils.py  llm_client.py  llm_client_manager.py  logger.py
tests/: test_basic.py
