[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antillmfuzz"
version = "1.0.0"
description = "Anti-LLM Fuzzing Disruptor - Research-grade system to degrade LLM-assisted fuzzing via documentation poisoning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AntiLLMFuzz Team", email = "contact@antillmfuzz.dev"}
]
keywords = ["fuzzing", "llm", "security", "adversarial", "testing", "coverage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "javalang>=0.13.0",
    "spacy>=3.7.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "hypothesis>=6.92.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/antifuzz/antillmfuzz"
Documentation = "https://antillmfuzz.readthedocs.io"
Repository = "https://github.com/antifuzz/antillmfuzz"
"Bug Tracker" = "https://github.com/antifuzz/antillmfuzz/issues"

[project.scripts]
antillmfuzz = "antillmfuzz.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
